# regression_experiments

./: CMakeLists.txt  package.xml
configs/: benchmark_config.xml
include/regression_experiments/: basic_functions.h  benchmark_function.h  benchmark_function_factory.h  gp_forest_solver.h  gp_solver.h  pwc_forest_solver.h  pwl_forest_solver.h  solver.h  tools.h
scripts/: .gitignore  plotBenchmark.r  plotBenchmarkMax.r  plotBoth.sh  plotPredictions.r
src/: benchmark_regression.cpp  build_forests_predictions.cpp  test_1d_regression.cpp  test_gp_approximations.cpp
src/regression_experiments/: basic_functions.cpp  benchmark_function.cpp  benchmark_function_factory.cpp  gp_forest_solver.cpp  gp_solver.cpp  multi_dimensional_solver.cpp  pwc_forest_solver.cpp  pwl_forest_solver.cpp  solver_factory.cpp  sources.cmake  tools.cpp
