<?xml version="1.0"?>
<package>
  <name>regression_experiments</name>
  <version>0.0.0</version>
  <description>This package contains benchmark for evaluating regression algorithms</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>
  <author email="medrimonia@gmail.com">medrimonia</author>

  <license>NCY</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosban_fa</build_depend>
  <run_depend>rosban_fa</run_depend>

  <export/>
</package>
